@@ -92,6 +92,7 @@ class CHost extends CZBXAPI{
 			'nodeids'					=> null,
 			'groupids'					=> null,
 			'hostids'					=> null,
+			'proxyids'					=> null,
 			'templateids'				=> null,
 			'itemids'					=> null,
 			'triggerids'				=> null,
@@ -236,6 +237,15 @@ class CHost extends CZBXAPI{
 				$nodeCheck = true;
 				$sql_parts['where'][] = DBin_node('h.hostid', $nodeids);
 			}
+		}
+		
+// proxyids
+		if(!is_null($options['proxyids'])){
+			zbx_value2array($options['proxyids']);
+			if($options['output'] != API_OUTPUT_SHORTEN){
+				$sql_parts['select']['proxy_hostid'] = 'h.proxy_hostid';
+			}
+			$sql_parts['where'][] = DBcondition('h.proxy_hostid', $options['proxyids']);
 		}
 
 // templateids
@@ -609,7 +619,7 @@ class CHost extends CZBXAPI{
 						$result[$host['hostid']]['triggers'][] = array('triggerid' => $host['triggerid']);
 						unset($host['triggerid']);
 					}
-
+					
 // itemids
 					if(isset($host['itemid']) && is_null($options['select_items'])){
 						if(!isset($result[$host['hostid']]['items']))
