@@ -78,6 +78,8 @@ class CProxy extends CZBXAPI{
 			'output'					=> API_OUTPUT_REFER,
 			'count'						=> null,
 			'preservekeys'				=> null,
+			
+			'select_hosts'				=> null,
 
 			'sortfield'					=> '',
 			'sortorder'					=> '',
@@ -93,7 +95,6 @@ class CProxy extends CZBXAPI{
 
 
 // editable + PERMISSION CHECK
-
 		if((USER_TYPE_SUPER_ADMIN == $user_type) || $options['nopermissions']){
 		}
 		else{
@@ -175,7 +176,7 @@ class CProxy extends CZBXAPI{
 			if($options['count'])
 				$result = $proxy;
 			else{
-				// $hostids[$proxy['hostid']] = $proxy['hostid'];
+				$proxyids[$proxy['hostid']] = $proxy['hostid'];
 
 				$proxy['proxyid'] = $proxy['hostid'];
 				unset($proxy['hostid']);
@@ -185,6 +186,10 @@ class CProxy extends CZBXAPI{
 				}
 				else{
 					if(!isset($result[$proxy['proxyid']])) $result[$proxy['proxyid']]= array();
+					
+					if(!is_null($options['select_hosts']) && !isset($result[$proxy['proxyid']]['hosts'])){
+						$result[$proxy['proxyid']]['hosts'] = array();
+					}
 
 					$result[$proxy['proxyid']] += $proxy;
 				}
@@ -198,6 +203,20 @@ class CProxy extends CZBXAPI{
 
 // Adding Objects
 
+// select_hosts
+		if(!is_null($options['select_hosts']) && str_in_array($options['select_hosts'], $subselects_allowed_outputs)){
+			$obj_params = array(
+				'nodeids' => $nodeids,
+				'output' => $options['select_hosts'],
+				'proxyids' => $proxyids,
+				'preservekeys' => 1
+			);
+			$hosts = CHost::get($obj_params);
+
+			foreach($hosts as $host){
+				$result[$host['proxy_hostid']]['hosts'][] = $host;
+			}
+		}
 
 // removing keys (hash -> array)
 		if(is_null($options['preservekeys'])){
