@@ -6,6 +6,7 @@ Changes for 1.9
 
 Changes for 1.8.3
 
+ - [ZBXNEXT-241] extended proxy screen to show proxy vps and item count (Vedmak)
  - [DEV-460] improved host-group and maps icons info in zabbix maps (Aly)
  - [ZBXNEXT-338] added caching of eventid's (Sasha)
  - [ZBX-1438] fixed not deleting data from trends_uint table when delete item (Vedmak)
